<resources>
    <string name="app_name">ThermostatApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="activity_base_drawer_weekly">Set Weekly</string>
    <string name="activity_base_drawer_viewWeekly">View Weekly</string>
    <string name="activity_base_drawer_vaction">Set Vacation</string>
    <string name="activity_base_drawer_settings">Settings</string>
    <string name="activity_base_drawer_help">Help</string>
    <string name="activity_base_drawer_header_title">Thermostat App</string>
    <string name="activity_base_drawer_main">Main</string>
    <string name="fragment_main_minus1_label">-1.0</string>
    <string name="fragment_main_minus01_label">-0.1</string>
    <string name="fragment_main_plus01_label">+0.1</string>
    <string name="fragment_main_plus1_label">+1.0</string>
    <string name="fragment_main_info_format">Current temperature: %.1f ºC</string>
    <string name="fragment_main_temp_format">%.1f ºC</string>
    <string name="settings">Settings</string>
    <string name="fragment_weekly_main_title">Weekly Program</string>
    <string name="fragment_weekly_weekdays_title">Weekdays</string>
    <string name="fragment_weekly_monday">Monday</string>
    <string name="fragment_weekly_tuesday">Tuesday</string>
    <string name="fragment_weekly_wednesday">Wednesday</string>
    <string name="fragment_weekly_thursday">Thursday</string>
    <string name="fragment_weekly_friday">Friday</string>
    <string name="fragment_weekly_saturday">Saturday</string>
    <string name="fragment_weekly_sunday">Sunday</string>
    <string name="fragment_weekly_weekend_title">Weekend</string>
    <string name="fragment_weeklyday_removeDialog_title">Remove time slot?</string>
    <string name="fragment_weeklyday_removeDialog_body">You are about to remove a time slot. Are you sure?</string>
    <string name="fragment_weeklyday_removeDialog_ok">OK</string>
    <string name="fragment_weeklyday_removeDialog_cancel">Cancel</string>
    <string name="fragment_main_vacation_enabled">The vacation mode is now enabled, all temperatures are overridden.</string>
    <string name="fragment_main_vacation_disabled">The vacation mode is now disabled. \r\nTemperature values are taken from the weekly program.</string>
    <string name="fragment_settings_error_range">All temperatures must be set to values between 5.0ºC and 30.0ºC</string>
    <string name="fragment_settings_error_nochange">No changes to be saved</string>
    <string name="fragment_settings_succes_saved">Your changes have been saved</string>
    <string name="fragment_help_weekly_text">The weekly program allows you to set beforehand the temperature type (day or night) for every day of the week, by selecting the initial and final hour of each time slot. \n\nTo set it, access the \&apos;Set Weekly\&apos; option in the menu and access to the day of the week you want to set the program of. There you can select the start and end time and the type. Keep in mind you are only allowed to do 5 transitions to day and 5 to night.</string>
    <string name="fragment_help_temperature_text">The two temperature values (day and night) can all be changed in the Settings page. Simply introduce a decimal value between 5.0 and 30.0 degrees Celsius and save the changes. \n\nFor changing the target temperature shown at the main page, you have four buttons, two for decrease it (-1.0 and -0.1) and two for increase it (+0.1 and +1.0). As long as the thermostat is not set to vacation mode, this functionality is available.</string>
    <string name="fragment_help_vacation_text">The vacation mode overrides the weekly program temperature and disables the functionality to change the target temperature on the fly in the main page. \n\nTo set it, access the \&apos;Main\&apos; option in the menu. There is a slider there to turn it ON or OFF. It will take the night temperature unless the current temperature set is lower that the night value.</string>
    <string name="fragment_help_title">FAQ &amp; Help</string>
    <string name="fragment_main_title">Main</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="fragment_settings_dayteamp_hint">Day Temperature</string>
    <string name="fragment_settings_nightteamp_hint">Night Temperature</string>
</resources>
