<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:text="@string/fragment_weekly_weekdays_title"/>
                <Button
                    android:id="@+id/fragment_weekly_main_monday_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    style="@style/AppButton.Primary"
                    android:layout_margin="4dp"
                    android:text="@string/fragment_weekly_monday"/>
                <Button
                    android:id="@+id/fragment_weekly_main_tuesday_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    style="@style/AppButton.Primary"
                    android:layout_margin="4dp"
                    android:text="@string/fragment_weekly_tuesday"/>
                <Button
                    android:id="@+id/fragment_weekly_main_wednesday_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    style="@style/AppButton.Primary"
                    android:layout_margin="4dp"
                    android:text="@string/fragment_weekly_wednesday"/>
                <Button
                    android:id="@+id/fragment_weekly_main_thursday_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    style="@style/AppButton.Primary"
                    android:layout_margin="4dp"
                    android:text="@string/fragment_weekly_thursday"/>
                <Button
                    android:id="@+id/fragment_weekly_main_friday_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    style="@style/AppButton.Primary"
                    android:layout_margin="4dp"
                    android:text="@string/fragment_weekly_friday"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:text="@string/fragment_weekly_weekend_title"/>
                <Button
                    android:id="@+id/fragment_weekly_main_saturday_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    style="@style/AppButton.Primary"
                    android:layout_margin="4dp"
                    android:text="@string/fragment_weekly_saturday"/>
                <Button
                    android:id="@+id/fragment_weekly_main_sunday_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    style="@style/AppButton.Primary"
                    android:layout_margin="4dp"
                    android:text="@string/fragment_weekly_sunday"/>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>